tests/negative/implicit_numeric_conversion.ax
module implicit_numeric_conversion;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    let x: u32 = cast(u32, 1);
    let y: u64 = x;
    return cast(i32, y);
}
